--- a/src/assets/MediaQuery.css
+++ b/src/assets/MediaQuery.css
@@ -118,5 +118,7 @@
     
     .card {
         grid-template-columns: auto;
+        place-content: center;
+        place-items: center;
     }
 }
